--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "express": "~4.14.0",
     "express-handlebars": "^3.0.0",
     "jade": "~1.11.0",
+    "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
