--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jade": "~1.11.0",
     "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^1.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
