--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "~4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
+    "gridfs-stream": "^1.1.1",
     "jade": "~1.11.0",
+    "mime": "^1.3.4",
+    "mongodb": "^2.2.22",
     "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
@@ -22,6 +25,5 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.7.2"
   }
 }
