--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^2.2.22",
     "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
-
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^1.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
