--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.14.2",
+    "express-session": "^1.15.0",
+    "flash": "^1.1.0",
     "gridfs-stream": "^1.1.1",
     "jade": "~1.11.0",
     "mime": "^1.3.4",
     "mongodb": "^2.2.22",
-    "mongoose": "^4.7.7",
+    "mongoose": "^4.7.8",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^1.0.0",
+    "nodemailer": "^2.7.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
