--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.2",
     "bootstrap": "^3.3.7",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
